[metadata]
name = fuzzinator
description = Fuzzinator Random Testing Framework
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Renata Hodovan, Akos Kiss
author_email = hodovan@inf.u-szeged.hu, akiss@inf.u-szeged.hu
url = https://github.com/renatahodovan/fuzzinator
license = BSD
license_files = LICENSE.rst
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    # Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Testing

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    chevron
    google-api-python-client
    importlib-metadata; python_version < "3.8"
    inators
    jinja2
    keyring
    keyrings.alt
    markdown
    oauth2client
    pexpect
    picire==21.8
    picireny==21.8
    psutil
    PyGithub
    pymongo
    pyperclip
    python-bugzilla
    python-gitlab
    rainbow_logging_handler
    tornado
    urwid
    xson

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fuzzinator = fuzzinator.executor:execute
